unpackaged/main/default/objects/Current_Acquirer__c/Current_Acquirer__c.object-meta.xml
<CustomObject>
    <label>Current Acquirer</label>
    <nameField>
        <displayFormat>CA-{0000}</displayFormat>
        <label>Current Acquirer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Current Acquirers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>