unpackaged/main/default/objects/Current_Acquirer__c/fields/Acquirer__c.field-meta.xml
<CustomField>
    <fullName>Acquirer__c</fullName>
    <label>Acquirer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>