unpackaged/main/default/objects/Current_Acquirer__c/fields/Card_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Card_Scheme__c</fullName>
    <label>Card Scheme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AliPay / WeChat</fullName>
            </value>
            <value>
                <fullName>Amex</fullName>
            </value>
            <value>
                <fullName>ApplePay</fullName>
                <isActive>false</isActive>
                <label>ApplePay</label>
            </value>
            <value>
                <fullName>Diners / Discovery</fullName>
            </value>
            <value>
                <fullName>GooglePay</fullName>
                <isActive>false</isActive>
                <label>GooglePay</label>
            </value>
            <value>
                <fullName>JCB</fullName>
            </value>
            <value>
                <fullName>MasterCard</fullName>
            </value>
            <value>
                <fullName>UnionPay</fullName>
            </value>
            <value>
                <fullName>VISA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>