unpackaged/main/default/objects/Current_Acquirer__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Current Acquirers</relationshipLabel>
    <relationshipName>Current_Acquirers</relationshipName>
    <type>Lookup</type>
</CustomField>